--- a/src/components/Controls/Controls.module.css
+++ b/src/components/Controls/Controls.module.css
@@ -47,7 +47,7 @@ input[type='color']::-webkit-color-swatch {
     width: 90vw;
   }
 
-  .controlsContainer li {
+  .controlsContainer > li {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
